<resources>
    <string name="app_name">Weather API</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="degrees_symbol">°</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind speed</string>
    <string name="clouds">Clouds %</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="wind_direction">Wind direction</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="legacy_icon">Legacy icon</string>
    <string name="precipitation">Precipitation</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="weather_icon">weather icon</string>
    <string name="_5_day_forecast">5 Day Forecast</string>
    <string name="fetching_location">Fetching location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="activate_location_services">Activate Location Services</string>
    <string name="edit_city_button">Edit City Button</string>
    <string name="city_search">Select City</string>
    <string name="next">Next</string>
    <string name="fetching_weather_info">Fetching weather info</string>
</resources>